Some changes in experimental section

--- a/builders.tex
+++ b/builders.tex
@@ -150,11 +150,19 @@ Finalmente, $\text{{PP}}(M)$ es un factor de ponderación que permite ajustar la
 Esta función de valoración nos proporciona una medida cuantitativa de la calidad del candidato representado por el conjunto de métodos $M$. Los candidatos con valores de función de valoración más altos se consideran de mayor calidad y son preferidos en los algoritmos genéticos y en los algoritmos greedys que explicaremos en la seccion \ref{sec:algorithms}.
 
 
-\subsection{Fitness: Objetos de Randoop}
+\subsection{Fitness: Cobertura de ramas con Randoop}
 
-En nuestra tesis, buscamos generar todos los posibles objetos que se pueden construir utilizando los métodos del cromosoma actual. Para lograr esto, desarrollamos una versión modificada de la herramienta Randoop, como se discutió brevemente en la Sección \ref{sec:feedback-directed-test-gen})
+En nuestra tesis, hemos modificado la herramienta \emph{Randoop} explicada en la seccion \ref{sec:feedback-directed-test-gen}).
 
-En primer lugar, realizamos modificaciones en Randoop para darle prioridad a un subconjunto de métodos específicos, representados en la seccion anterior por conjunto $M$. Esto nos permite generar secuencias de pruebas que se centren en la ejecución de estos métodos en particular.
+En primer lugar, realizamos modificaciones en Randoop para darle prioridad a un subconjunto de métodos específicos, representados en la seccion anterior por el conjunto $M$. Esto nos permite generar secuencias de pruebas que se centren en la ejecución de estos métodos en particular. Esto es solo una prioridad que se le da, ya que queremos seguir generando con los otros metodos porque buscamos obtener buena cobertura de los metodos de la API a partir de un subconjunto de metodos a los cueles se la mas probabilida de ser elegidos. Pero se puede observar que si solo utilizamos estos metodos para construir secuencias, solo obtenderiamos buena cobertura de estos metodos pero esto no nos daria indicios de nada.
+
+
+
+
+
+buscamos generar todos los posibles objetos que se pueden construir utilizando los métodos del cromosoma actual. Para lograr esto, desarrollamos una versión modificada de la herramienta Randoop, como se discutió brevemente en la Sección \ref{sec:feedback-directed-test-gen})
+
+
 
 En segundo lugar, ejecutamos las llamadas a los métodos de cada test generado por Randoop para crear objetos, y contabilizamos la cantidad de objetos que podemos construir. Es importante destacar que la cantidad de objetos no es necesariamente igual a la cantidad de pruebas generadas, ya que en una misma prueba pueden crearse varios objetos de la clase bajo test. Por lo tanto, contamos estos objetos para determinar cuántos objetos podemos crear con las secuencias de pruebas generadas por Randoop.
 
@@ -344,406 +352,4 @@ En este algoritmo, se comienza obteniendo los conjuntos singletons, que son los 
 A continuación, se itera mientras se haya creado una nueva clase de equivalencia. En cada iteración, se generan nuevos candidatos por cada clase de equivalencia. Es decir, se selecciona un candidato de cada clase de equivalencia (El de menor métodos y menor parámetros) $CandidatosPorClase(equivalenceClasses)$ y se lo guarda en un cola ($newCandidates$) A continuación, se generan los sucesores para cada candidato elegido, $GenerarSucesores(candidate)$, utilizando el mismo enfoque que en el algoritmo de \emph{Hill Climbing}. Estos se guardan en $successors$ Es decir, si tenemos $N$ clases de equivalencias vamos a tener $N$ candidatos a los cuales le vamos a calcular sus sucesores.  Luego, por cada uno de estos sucesores en  se le calcula sun función de valoracion y de acuerdo a esta se lo guarda en la clase de equivalencia representada por el valor de valarocion.
 El algortimo itera hasta que no hayamos creado una nueva clase de equivalencia. Esto quiere decir que no hay cambios y hemos explorados todas las alternativas posibles. 
 Luego vamos a obtener el mejor conjunto de métodos builders, accediendo a la clase de equivalencia con mayor key y obteniendo el representante de ese conjunto que tenga menor métodos y parámetros. Esto lo realiza el método $obtenerMejor(equivalenceClasses)$
-
-\section{Evaluacion Experimental}
-En esta sección, evaluamos experimentalmente nuestros enfoques. Describiremos como es la eficiencia de cada algoritmo con las fitness
-presentada en la seccion \ref{sec:fitness}.
-La evaluación se basa en un conjunto de implementaciones de estructuras de datos que se utilizan como referencia, incluyendo: \verb"NCL" de Apache Collections \cite{apache}; \verb"BinaryTree", \verb"BinomialHeap", \verb"FibonacciHeap" tomados de \cite{Visser:2006}; \verb"UnionFind", una implementación de conjuntos disjuntos tomada de JGrapht \cite{jgrapht}. También evaluamos nuestra técnica en componentes de proyectos de software reales, como \verb"Lits" de la implementación de Sat4j \cite{sat4j}, tomada de \cite{Loncaric:2018}, que consiste en un almacén de variables que controla cuándo se realizó la última suposición sobre el valor de una variable y si hay oyentes observando el estado de esa variable; \verb"Scheduler", una implementación de un planificador de procesos tomada de \cite{sir}; y estructuras de datos conocidas de la paquete \verb"java.util" como: \verb"TreeMap", \verb"TreeSet", \verb"HashMap", \verb"HashSet" y \verb"LinkedList". \cacho{TODO: ¿Cómo cito java-utils?)}
-
-Para corroborar nuestros resultados, necesitamos conocer cuales son los metodos builders minimos y suficiente de cada caso de estudio. Para esto se creo un \emph{ground Truth} manualmente. Para esto hemos inspeccionado cada caso de manera manual. Esto llevo un largo trabajo para estudiar los casos de estudio mas complejo. El \emph{ground truth} de nuestros casos de estudios se pueden observar en la tabla \ref{tab:groundTruth}
-    
-Todos los experimentos se ejecutaron en máquinas Intel Core i7-6700 de 3.4 GHz con 8GB de RAM, utilizando GNU/Linux como sistema operativo.
-
-\input{tables/groundTruth}
-\subsection{Eficiencia y Efectividad}
-
-% \subsubsection{Eficiencia}
-
-Para evaluar la eficiencia de nuestro algoritmo, realizamos experimentos utilizando conjuntos de datos de muestra y medimos el tiempo promedio de las 10 ejecuciones necesarias para obtener las soluciones. Comparando los resultados obtenidos con la técnica evolutiva y la técnica greedy, pudimos evaluar la eficiencia de ambos enfoques y determinar cuál es más rápido en términos de tiempo de ejecución.
-
-Además, evaluamos la efectividad de cada algoritmo en función del objetivo de aptitud deseado. Estos resultados se presentan en la tabla de efectividad. En esta tabla, se muestra el porcentaje de las 10 ejecuciones en las que se encontró el cromosoma indicado en el ground truth. El ground truth proporciona la solución óptima o de referencia para comparar con los resultados obtenidos por los algoritmos.
-
-La tabla de efectividad nos brinda información sobre qué tan cerca estuvieron los algoritmos de alcanzar la solución óptima en cada ejecución. Esto nos permite evaluar la precisión y la capacidad de los algoritmos para encontrar soluciones cercanas al objetivo deseado.
-
-Es importante destacar que estos resultados son el producto de la evaluación experimental y pueden variar según los conjuntos de datos utilizados y los parámetros de los algoritmos. Sin embargo, proporcionan una medida cuantitativa de la eficiencia y efectividad de nuestros enfoques.
-
-\cacho{Agregar tiempo de randoop que se corre}
-% En resumen, mediante esta evaluación experimental, hemos analizado la eficiencia de nuestros algoritmos, comparado diferentes enfoques y evaluado su efectividad en función de los objetivos de aptitud. Estos resultados nos permiten tomar decisiones informadas sobre la elección de la técnica más adecuada para nuestro problema y comprender el desempeño de nuestros algoritmos en situaciones reales.
-
-\input{tables/compareAllBuilders}
-
-Para evaluar la eficiencia de nuestro algoritmo, llevamos a cabo experimentos utilizando conjuntos de datos de muestra y medimos el tiempo de promedio de las 10 ejecuciones necesarias para obtener las soluciones. Comparando los resultados obtenidos con la técnica evolutiva y la técnica greedy, pudimos evaluar la eficiencia de ambas enfoques y determinar cuál es más rápido.
-
-Ademas evaluamos la efectividad que tiene cada algoritmo de acuerdo a la fitness deseada. Estos resultados se pueden ver en \ref{tab:efectividad}. Esta tabla nos indica que porcentaje de las 10 ejecuciones encontro el cromosoma indicado en el ground truth (Ver Tabla \ref{tab:groundTruth})
-
-\input{tables/tableEfectividad}
-
-
-Además de analizar la eficiencia, también investigamos la sensibilidad de algunos parámetros del GA. Ajustamos parámetros como el tamaño de la población, la tasa de mutación y el número de generaciones, y observamos cómo estos cambios afectaron el rendimiento del algoritmo y los resultados obtenidos. Esto nos permitió identificar las configuraciones óptimas de los parámetros y entender cómo influyen en el proceso de búsqueda.
-
-Adicionalmente, examinamos los usos de los builders generados por nuestra técnica. Analizamos las características y las funcionalidades de los builders aprendidos y evaluamos su utilidad en diferentes tareas. Estudiamos cómo los builders pueden ser aplicados en el análisis y la manipulación de datos, y evaluamos su efectividad en términos de rendimiento y calidad de los resultados obtenidos.
-
-
-\cacho{Buscar caso que no encuentre los minimos.}
-
-% \paragraph{Randoop Objects}
-% \label{sec:randoopObjectsExp}
-
-
-
-
-% \paragraph{Bounded Exhuastive}
-% \label{sec:BEExp}
-
-
-El resultado de los casos de estudios se muestran en la Tabla \ref{tab:EficienciaGA} 
-
-
-
-
-\cacho{Explicar caso por caso}
-
-
-A continuación, mostraremos las diferentes y diferentes configuraciones que hemos probamos nuestros casos con los parámetros que explicamos en el capítulo \ref{capi:beapi}
-
-\cacho{Grafico por tiempo y candidatos. Solo Ga con las dos fitness
-}
-
-\input{graph/mutationGA}
-\input{graph/populationGA}
-
-\subsubsection{Variacion de acuerdo a los Parametros}
-
-% Ademas, examinamos la sensibilidad de los parámetros del Algoritmo Genético y exploramos los usos de los builders generados. Los resultados obtenidos proporcionaron información valiosa sobre el rendimiento y la utilidad de nuestra técnica en la generación de builders y su aplicación en diversas tareas.
-
-
-Como vimos en el capitulo \ref{cap:beapi}, necesitamos setear cierto parámetros para el funcionamiento de nuestros algoritmos y nuestras funcion de valoración. Los parametros mas importnate que influyen en la eficiencia y efectividad para nuestro algoritmo geneticos son el \emph{rate} de mutacion y de cross-over y el numero de poblacion y el numero de torneos en la seleccion.
-Para nuestra fitness de randoop, es importante saber con cuanto tiempo dispone para generar objectos.
-Para la fitness de Beapi, es importante conocer con que scope se llega a una solución optima y eficiente.
-Para setear estos valores para la experimentación hemos realizado una tarea de prueba y error para ir viendo con que valores se ajustan mejor nuestros algoritmos. 
-
-
-
-mas precisamente \cacho{RefGenetic} para nuestro algoritmo genetico necesitamos setear un \emph{rate} para los operadores geneticos. Para eso hemos probado en los casos de estudios con diferentes valores de cada operador. Nuestra comparacion se basa en medir la cantidad de tiempo que le lleva a cada Algortimo terminar la ejecucio, en la cantidad de candidatos que evalua la funcion de valoracion y cuan bueno es en eficacia para encontrar el minimo y suficiente subconjunto de metodos que pudimos observar en nuestro ground truth \cacho{Agregar seccion}. Ejecutamos el algoritmo 10 veces con el resto de los parametros que no esta en evaluacion con un valor promedio (Crossover=0.5, mutation 0.1, Tournanament 4).
-Tambien utilizamos 30 segundos para la fitness con randoop y scope 6 para BEAPI.
-
-En la tabla \ref{tab:CrossOverGA} se puede observar como se comporta el algoritmo cuando se utiliza diferente rate para el operador de CrossOver. 
-
-
-
-
-
-% \input{tables/tableMutation}
-
-\subsection{Uso de Builders en verificación}
-
-En el ultimo experimento sobre la identificación de \emph{builders}, utilicé Java PathFinder \cite{Visser:2005} (JPF) para realizar pruebas de generación de entradas de software para estructuras de datos de \emph{java.util}. JPF \cacho{REF} es un verificador de modelos de estado explícito para programas escritos en Java. Para realizar la verificación, las técnicas de versificación de modelos de software se basan en la definición de controladores de métodos: combinaciones de métodos que permiten construir las entradas con las que se ejecutará el programa. Intuitivamente, es deseable seleccionar el menor conjunto de métodos posible, cuyas combinaciones permitan construir todas las estructuras acotadas para el módulo (para analizar el software con todas las entradas posibles). La dificultad de escribir controladores de pruebas es un obstáculo importante para el uso de un verificador de modelos. Esta selección de métodos, que generalmente se realiza manualmente, no es una tarea fácil: requiere un análisis exhaustivo de las rutinas disponibles en el módulo y una comprensión profunda de su semántica.
-Es posible construir un método no determinista (harness de test) que genere todas las secuencias de llamadas a métodos de la API hasta un tamaño especificado por el usuario (scope). JPF se utiliza para enumerar todas estas secuencias. JPF almacena todos los estados explorados y retrocede cuando visita un estado previamente explorado.
-
-JPF admite anotaciones de programa que se agregan a los programas a través de llamadas a métodos de una clase especial Verify.
-Utilizamos los siguientes métodos de la biblioteca JPF \verb"Verify":
-\\
-\begin{itemize}
-\item El método \verb"Verify.getInt(int lo, int hi)" devuelve un valor entre \verb"lo" y \verb"hi", inclusive. Crea un punto de elección no determinista: JPF necesita explorar las ejecuciones para todos los valores en el rango.
-\item \verb"random(int n)" devuelve valores de 0 a \verb"n", de manera no determinista.
-\end{itemize}
-
-Si se desea verificar que el método \emph{put}  de TreeMap cumple con el repOK (predicado imperativo que verifica las invariantes de clase) de la estructura de datos, es necesario escribir algo como: 
-\\
-
-\begin{lstlisting}[caption={Probando el método put de TreeMap con JPF},label={lst:label},language=Java,captionpos=b]
-public static void main(String[] args) {
-   int scope = 3;
-   TreeMap t = generateStructure(scope);
-   t.put(Verify.getInt(0,scope),Verify.getInt(0,scope));
-   assert t.repOK();
-}
-\end{lstlisting}
-
-Para realizar el análisis de esta propiedad, es necesario proporcionar a JPF los mecanismos para generar todo el árbol de entrada (\textit{generateStructure}). 
-En el siguiente ejemplo, mostramos un controlador de prueba construido con todos los métodos de la estructura de datos \textit{TreeMap}:
-\\
-\\
-\begin{lstlisting}[caption={Controlador con todos los métodos},label={lst:driverAPI},language=Java,captionpos=b]
-private static TreeMap generateStructure(int scope) {
-   int maxLength = Verify.getInt(0, scope);
-   TreeMap t = new TreeMap();
-   for (int i = 1; i <= maxLength; i++) {
-      switch (Verify.random(n_methods)) {
-         case 0:
-            t.put(Verify.getInt(0,scope),Verify.getInt(0,scope));
-            break;
-         case 1:
-            t.remove(Verify.getInt(0,scope));
-            break;						
-         case 2:
-            t.clear();
-            break;
-         case 3:
-            t.containsValue(Verify.getInt(0,scope));
-            break;
-         ...
-         case 11: 
-            t.putAll(l);
-            break;
-      }
-   }
-   return t;
-}
-\end{lstlisting}
-
-El método controlador anterior, en primer lugar, selecciona el número de métodos a ejecutar, \textit{maxLength}, un número entre 0 y \textit{scope}. (Linea 2). Cada iteración del ciclo (Linea 4 a 23) corresponde a la ejecución de un solo método, seleccionado de manera no determinista entre todos los disponibles. En el caso de que el usuario no conozca el conjunto de métodos builders (y no quiera hacer el complicado trabajo de seleccionarlos manualmente), la solución más segura para evitar descartar métodos importantes es utilizar todos los métodos disponibles en el módulo, como se muestra en el método controlador descrito anteriormente. En el cuerpo del bucle, a cada método se le asigna un número entero entre 0 y \textit{n\_methods}. Se elige de manera no determinista el método a ejecutar en el ciclo actual. Por ejemplo, si \textit{n\_methods}=1, se ejecuta el método \textit{remove}. Es fácil ver que el número de ejecuciones posibles que se deben explorar por JPF crece exponencialmente con el número de métodos disponibles.
-
-%(for every method that is executed in one iteration, there are \textit{n_methods} possible methods to execute in the next iteration).
-
-Para evitar este crecimiento exponencial en este experimento, se propone utilizar únicamente los constructores detectados por nuestro enfoque explicado en la sección \ref{sec:builders}.
-\\
-\\
-\begin{lstlisting}[caption={Controlador con métodos constructores},label={lst:driverBLD},language=Java,captionpos=b]
-private static TreeMap generateStructure(int scope) {
-   int maxLength = Verify.getInt(0,scope);
-   TreeMap t = new TreeMap();
-   for (int i = 1; i <= maxLength; i++) {
-      switch (Verify.random(11)) {
-         case 0:
-            t.put(Verify.getInt(0,scope),Verify.getInt(0,scope));
-            break;
-         case 1:
-            t.remove(Verify.getInt(0,scope));
-            break;						
-      }
-   }
-   return t;
-}
-\end{lstlisting}
-
-Como se muestra en el controlador anterior, solo 2 métodos componen un conjunto mínimo y suficiente para construir controladores para TreeMap de \textit{java.util}. Utilizando solo esos métodos, generamos exactamente los mismos objetos TreeMap que antes (porque los constructores son suficientes y mínimos), y por lo tanto JPF explora las mismas ejecuciones de propiedades con ambos controladores.
-
-Los resultados de la tabla \ref{tab:results1-jpf} y \ref{tab:results2-jpf} muestran que la construcción del controlador a partir de nuestro enfoque presentado permite aumentar la eficiencia y escalabilidad a estructuras más grandes en el análisis utilizando JPF. Esto se debe a la reducción de los métodos utilizados en los controladores (evitando métodos superfluos) y manteniendo la capacidad de construir todos los objetos acotados posibles (debido a la suficiencia de los métodos elegidos) en menos tiempo.
-
-
-
-
-\begin{table}
-\scriptsize
-\begin{tabular}{ c| l| c c c c c}
-\hline
-Class & Method & Scope &
-\multicolumn{2}{c}{\textsf{Builders}} &
-\multicolumn{2}{c}{\textsf{AllMethods}} \\
-&&&
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
-\hline
-\multirow{14}{*}{LinkedList} 
-& add
-  & 1 & 11  & 0 & 42  & 0 \\
-& & 2 & 58  & 0 & 715 & 0 \\
-& & 3 & 453 & 0 & 11064 & 2 \\
-& & 4 & 4881  & 1 & 153247  & 14  \\
-& & 5 & 67183 & 13  & 2291803 & 171 \\
-& & 6 & 1120932 & 221 & 39759491  & 2771  \\
-& & 7 & 21913097  & 4588  &TO  & \\
-
-\cline{2-7}
- &remove 
-  & 1 & 11  & 0 & 42  & 0 \\
-& & 2 & 58  & 0 & 715 & 0 \\
-& & 3 & 453 & 0 & 11064 & 2\\
-& & 4 & 4881  & 1 & 153247  & 14\\
-& & 5 & 67183 & 11  & 2291803 & 168\\
-& & 6 & 1120932 & 188 & 39759491  & 2713\\
-& & 7 & 21913097  & 3998  & TO \\ 
-
-\hline
-\multirow{10}{*}{TreeMap} 
-% Check
-& put
-  & 1 & 45  & 0 & 112 & 0 \\
-& & 2 & 991 & 0 & 2821  & 0 \\
-& & 3 & 16071 & 2 & 71678 & 8 \\
-& & 4 & 552807  & 75  & 1757976 & 204 \\
-& & 5 & 20601447  & 3007  & TO& \\
-\cline{2-7}
-
-& remove
-  & 1 & 25  & 0 & 61  & 0 \\
-& & 2 & 406 & 0 & 1345  & 0 \\
-& & 3 & 8359  & 1 & 33845 & 3 \\
-& & 4 & 182732  & 19  & 768564  & 66  \\
-& & 5 & 7176075 & 713 & 24775111  & 2341  \\
-
-
-
-%  && 5 &  & MO & - & - &MO  &  &-  & -  \\
-
-
-\hline
-\multirow{19}{*}{TreeSet} 
-&put
-  & 1 & 11  & 0 & 48  & 0 \\
-& & 2 & 49  & 0 & 595 & 0 \\
-& & 3 & 197 & 0 & 5275  & 1 \\
-& & 4 & 806 & 0 & 36427 & 4 \\
-& & 5 & 3115  & 0 & 204877  & 19  \\
-& & 6 & 12062 & 1 & 1024038 & 90  \\
-& & 7 & 47241 & 5 & 4966224 & 452 \\
-& & 8 & 501666  & 45  & 23976826  & 2094  \\
-& & 9 & 2047285 & 183 &TO  &  \\
-\cline{2-7}
-
-& remove
-  & 1 & 17  & 0 & 48  & 0 \\
-& & 2 & 88  & 0 & 595 & 0 \\
-& & 3 & 423 & 0 & 5275  & 1 \\
-& & 4 & 1842  & 0 & 36427 & 4 \\
-& & 5 & 7455  & 1 & 204877  & 19  \\
-& & 6 & 30197 & 3 & 1024038 & 88  \\
-& & 7 & 122717  & 10  & 4966224 & 431 \\
-& & 8 & 501666  & 43  & 23976826  & 2088  \\
-& & 9 & 2047285 & 181 & TO    \\
-& & 10  & 8182166 & 719 &    TO  \\
-& & 11  & 31473779  & 2738  &  TO     \\
-\hline
-
-\end{tabular}%
-\caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
-\label{tab:results1-jpf}
- \end{table}
-
-\begin{table}[!thb]
-\scriptsize
-\begin{tabular}{ c| l| c c c c c}
-\hline
-Class & Method & Scope &
-\multicolumn{2}{c}{\textsf{Builders}} &
-\multicolumn{2}{c}{\textsf{AllMethods}} \\
-&&&
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
-\tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
-\hline
-\multirow{14}{*}{LinkedList} 
-& remove
-  & 1 & 17  & 0 & 48  & 0 \\
-& & 2 & 88  & 0 & 595 & 0 \\
-& & 3 & 423 & 0 & 5275  & 1 \\
-& & 4 & 1842  & 0 & 36427 & 4 \\
-& & 5 & 7455  & 1 & 204877  & 19  \\
-& & 6 & 30197 & 3 & 1024038 & 88  \\
-& & 7 & 122717  & 10  & 4966224 & 431 \\
-& & 8 & 501666  & 43  & 23976826  & 2088  \\
-& & 9 & 2047285 & 181 & TO    \\
-& & 10  & 8182166 & 719 &    TO  \\
-& & 11  & 31473779  & 2738  &  TO     \\
-
-\hline
-
-\multirow{11}{*}{HM} 
-& put
- & 1 & 21& 0& 100 & 0 \\
-& & 2 & 136& 0& 235 & 0 \\
-& & 3 & 2945& 0& 59494 & 9 \\
-& & 4 & 64626& 11&  1808536& 299 \\
-& & 5 & 1512217& 267& TO&  \\
-
- \cline{2-7}
-
-& remove
- & 1 &25 & 0& 56 & 0 \\
-& & 2 &325 & 0& 1144 &  0\\
-& & 3 & 5479& 1& 23966 & 3 \\
-& & 4 & 105607& 10& 627361 &  78\\
-& & 5 & 2289075& 213& 22547086 &3011  \\
-& & 6 & 55335111 & 5017&TO &  \\
-
-\hline
-
-\multirow{14}{*}{HS} 
-& put
-  & 1 & 11  & 0 & 30  & 0 \\
-& & 2 & 40  & 0 & 248 & 0 \\
-& & 3 & 149 & 0 & 1405  & 0 \\
-& & 4 & 531 & 0 & 6259  & 1 \\
-& & 5 & 1765  & 0 & 24107 & 3 \\
-& & 6 & 5496  & 0 & 84617 & 8 \\
-& & 7 & 16217 & 2 & 278241  & 24  \\
-
-
-\cline{2-7}
-
-& remove
-  & 1 & 11  & 0 & 30  & 0 \\
-& & 2 & 40  & 0 & 248 & 0 \\
-& & 3 & 149 & 0 & 1405  & 0 \\
-& & 4 & 531 & 0 & 6259  & 1 \\
-& & 5 & 1765  & 0 & 24107 & 3 \\
-& & 6 & 5496  & 0 & 84617 & 8 \\
-& & 7 & 16217 & 1 & 278241  & 24  \\
-
-\hline
-
-\end{tabular}%
-\caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
-\label{tab:results2-jpf}
- 
-\end{table}
-
-
-
-
-
-
-
-
-
-
-
-
-
-\begin{table}[!thb]
-\scriptsize
-
-\centering
-\begin{tabular}{ l r | r | r | r | r  }
-  \toprule
-  \multicolumn{6}{c}{\textbf{Real World}} \\
-  \midrule 
-  \textbf{Class} & \textbf{S} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
-  \midrule
-  NCL
-  & 3 & .10 & .47 & -  & -  \\
-  & 4 & .41 & 3.48  &  - & -  \\
-  & 5 & 3.33  &  - &  - & -  \\
-  & 6 & 73.78 &  - &  - &  - \\
-  \midrule
-  TSet
-  & 3 & .03 & .07 & 56.82 & - \\
-  & 11  & 21.52 & 86.06 &  - & -  \\
-  & 12  & 69.98 & 276.85  &  - & -  \\
-  & 13  & 226.66  & 887.83  &  - & -  \\
-    \midrule
-  TMap
-  & 3 & .11 & .25 & - & - \\
-  & 4 & .75 & 2.36  &  - &  - \\
-  & 5 & 15.97 & 57.64 &  - & -  \\
-  & 6 & 839.87  & 2901.37 &  - &  - \\
-  \midrule
-  LList
-  & 3 & .02 & .13 & .64 & - \\
-  & 6 & .96 & 258.85  & -  &  - \\
-  & 7 & 12.98 &  - &  - &  - \\
-  & 8 & 286.21  & -  & -  & -  \\
-  \midrule
-  HMap
-  & 3 & .10 & 11.49 & - & - \\
-  & 4 & .55 & -  & -  & -  \\
-  & 5 & 5.33  & -  &  - &  - \\
-  & 6 & 119.87  &  - &  - &  - \\
-  \bottomrule
-
-\end{tabular}
-
-\label{table:beapi}
-
-\end{table}
 
